storage/longhorn/longhorn-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: longhorn-ingress
  namespace: longhorn-system
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/auth-type: "forward"
    ingress.kubernetes.io/auth-url: "http://auth0-forwardauth.default.svc.cluster.local/authorize"
    ingress.kubernetes.io/auth-trust-headers: "true"
spec:
  rules:
  - host: longhorn.k.$DOMAIN
    http:
      paths:
      - backend:
          serviceName: longhorn-frontend
          servicePort: 80
